--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="logo_search">
                 <div class="header_logo">
                     <a href="" title="Test demo bai tap lon nhom 7">
-                        <img src="./assets/img/final_copy_4x.png" alt="">
+                        <img src="./assets/img/logo-MobileShop.jpg" alt="">
                     </a>
                 </div>
                 <div class="header_search">
@@ -40,7 +40,7 @@
                         <a href=""><li class="signout">Đăng Kí</li></a>
                     </ul>
                     <a href="">
-                        <img src="./assets/img/cart.png" alt="">
+                        <img src="./assets/img/logo-cart.jpg" alt="">
                     </a>
                 </div>
             </div>
@@ -67,10 +67,11 @@
 
         <!-- Slide Show -->
         <div id="slideshow">
+
             <div class="slide-wrapper">
-              <div class="slide"><img src="./assets/img/dt3.jpg"></div>
-              <div class="slide"><img src="./assets/img/dt5.jpg"></div>
-              <div class="slide"><img src="./assets/img/dt6.jpg"></div>
+              <div class="slide"><img src="./assets/img/slide4.jpg"></div>
+              <div class="slide"><img src="./assets/img/slide2.jpg"></div>
+              <div class="slide"><img src="./assets/img/slide1.jpg"></div>
             </div>
         </div>
 
@@ -224,7 +225,7 @@
                     </div>
                 </div>
             </div>
-            <div class="banner-sale"><img src="./assets/img/banner-sale.jpg" alt="" style="padding: 20px 74px;"></div>
+            <div class="banner-sale"><img src="./assets/img/galaxy.jpg" alt=""></div>
             <div class="name-product">TABLET</div>
             <div class="grid_column-10">
                 <div class="grid__row">
@@ -271,6 +272,7 @@
                     </div>
                 </div>
             </div>
+            <div class="banner-sale"><img src="./assets/img/samsung-a-series-1200x200.jpg" alt=""></div>
             <div class="name-product">SIM THẺ</div>
             <div class="grid_column-10">
                 <div class="grid__row">
@@ -326,15 +328,9 @@
                             <h4 class="footer_name">THÔNG TIN LIÊN HỆ</h4>
                             <ul class="footer_list">
                                 <li class="footer_iteam">
-                                    <i class="far fa-copyright">
-                                        2020. CÔNG TY CỔ PHẦN XÂY DỰNG VÀ ĐẦU TƯ THƯƠNG MẠI HOÀNG HÀ.
-                                    </i>
-                                </li>
-                                <li class="footer_iteam">
                                     <i class="fas fa-map-marker-alt">
                                         26 Phù Đổng Thiên Vương, P.Phạm Đình Hổ, Q. Hai Bà Trưng, Hà Nội. 
                                     </i>
-                                    </a>
                                 </li>
                                 <li class="footer_iteam">
                                     <i class="fas fa-phone-square-alt">
@@ -354,6 +350,11 @@
                                 <li class="footer_iteam">
                                     <i class="fas fa-globe-americas">
                                         Website: baitaplon.vn 
+                                    </i>
+                                </li>
+                                <li class="footer_iteam">
+                                    <i class="far fa-copyright">
+                                        2020. CÔNG TY CỔ PHẦN XÂY DỰNG VÀ ĐẦU TƯ THƯƠNG MẠI HOÀNG HÀ.
                                     </i>
                                 </li>
                             </ul>
@@ -396,14 +397,13 @@
                         <div class="footer-3">
                             <h4 class="footer_name">KẾT NỐI MẠNG XÃ HỘI</h4>
                             <div class="logo-facebook" style="display: flex;">
-                                <img src="./assets/img/logo-facebook.png" alt="" style="height: 40px; width: 40px;">
-                                <img src="./assets/img/logo-name-fb.png" alt="" style="height: 50px; width: 260px;">
+                                <img src="./assets/img/logo-facebook.jpg" alt="" style="height: 50px; width: 50px;">
                             </div>
                             <div class="logo-facebook" style="display: flex;">
-                                <img src="./assets/img/YouTube-Logo.png" alt="" style="height: 80px; width: 200px;">
+                                <img src="./assets/img/logo-youtube.jpg" alt="" style="height: 50px; width: 50px;">
                             </div>
                             <div class="logo-facebook" style="display: flex;">
-                                <img src="./assets/img/instagram-logo-name.png" alt="" style="height: 50px; width: 260px;">
+                                <img src="./assets/img/logo-instagram.jpg" alt="" style="height: 50px; width: 50px;">
                             </div>
                         </div>
                     </div>
