--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                         <a href=""><li class="signout">Đăng Kí</li></a>
                     </ul>
                     <a href="">
-                        <img src="./assets/img/logo-cart.jpg" alt="">
+                        <img src="./assets/img/logo_cart.jpg" alt="">
                     </a>
                 </div>
             </div>
@@ -69,7 +69,7 @@
         <div id="slideshow">
 
             <div class="slide-wrapper">
-              <div class="slide"><img src="./assets/img/slide4.jpg"></div>
+              <div class="slide"><img src="./assets/img/iporn.jpg"></div>
               <div class="slide"><img src="./assets/img/slide2.jpg"></div>
               <div class="slide"><img src="./assets/img/slide1.jpg"></div>
             </div>
